--- a/app/src/main/res/layout-sw600dp/activity_item_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_item_list.xml
@@ -16,9 +16,8 @@
     
     -->
 
-    <fragment
+    <FrameLayout
         android:id="@+id/item_list"
-        android:name="com.tokko.recipesv2.masterdetail.ItemListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
