--- a/app/src/main/res/menu/menu_grocery_list.xml
+++ b/app/src/main/res/menu/menu_grocery_list.xml
@@ -6,4 +6,8 @@
         android:orderInCategory="100"
         android:title="Register"
         app:showAsAction="never" />
+    <item
+        android:id="+id/refresh"
+        android:title="Refresh"
+        app:showAsAction="ifRoom" />
 </menu>
