--- a/app/src/main/res/menu/menu_grocery_list.xml
+++ b/app/src/main/res/menu/menu_grocery_list.xml
@@ -7,7 +7,7 @@
         android:title="Register"
         app:showAsAction="never" />
     <item
-        android:id="+id/refresh"
+        android:id="@+id/refresh"
         android:title="Refresh"
         app:showAsAction="ifRoom" />
 </menu>
