--- a/app/src/main/res/layout/buttonbar.xml
+++ b/app/src/main/res/layout/buttonbar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/buttonbar"
     style="?android:buttonBarStyle"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:visibility="gone">
 
