--- a/app/src/main/res/menu/itemdetail.xml
+++ b/app/src/main/res/menu/itemdetail.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/edit"
-        android:title="Edit"
-        app:showAsAction="always" />
+        android:showAsAction="always"
+        android:title="Edit" />
 </menu>
