--- a/app/src/main/res/layout/grocerydetailfragment.xml
+++ b/app/src/main/res/layout/grocerydetailfragment.xml
@@ -7,6 +7,6 @@
     <com.tokko.recipesv2.views.EditTextViewSwitchable
         android:id="@+id/grocery_title"
         style="@android:style/TextAppearance.DeviceDefault.Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
