--- a/app/src/main/res/menu/itemfragmentlist.xml
+++ b/app/src/main/res/menu/itemfragmentlist.xml
@@ -4,4 +4,7 @@
         android:id="@+id/listad_add"
         android:showAsAction="always"
         android:title="Add" />
+    <item
+        android:id="@+id/manage_groceries"
+        android:title="Manage groceries" />
 </menu>
