--- a/app/src/main/res/layout/recipedetailfragment.xml
+++ b/app/src/main/res/layout/recipedetailfragment.xml
@@ -2,11 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
+    <com.tokko.recipesv2.views.EditableIngredientList
+        android:id="@+id/ingredient_list"
+        android:layout_width="150dp"
+        android:layout_height="match_parent" />
 
     <com.tokko.recipesv2.views.EditTextViewSwitchable
         android:id="@+id/recipe_title"
         style="@android:style/TextAppearance.DeviceDefault.Medium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 </LinearLayout>
