--- a/app/src/main/res/layout/ingredientdetailfragment.xml
+++ b/app/src/main/res/layout/ingredientdetailfragment.xml
@@ -10,4 +10,24 @@
         android:layout_height="wrap_content"
         android:completionThreshold="1"
         android:hint="Grocery" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/ingredient_quantity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Quantity"
+            android:inputType="numberDecimal" />
+
+        <Spinner
+            android:id="@+id/ingredient_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
