--- a/app/src/main/res/layout/scheduleactivity.xml
+++ b/app/src/main/res/layout/scheduleactivity.xml
@@ -7,14 +7,14 @@
     <fragment
         android:id="@+id/recipeListFragment"
         android:name="com.tokko.recipesv2.schedule.RecipeListFragment"
-        android:layout_width="0do"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <fragment
         android:id="@+id/scheduleFragment"
         android:name="com.tokko.recipesv2.schedule.ScheduleFragment"
-        android:layout_width="0do"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 </LinearLayout>
