--- a/app/src/main/res/layout/shoppinglistfragment.xml
+++ b/app/src/main/res/layout/shoppinglistfragment.xml
@@ -4,5 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ListView
+        android:layout_weight="1"
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:text="Add"
+        android:id="@+id/shoppingListAddbutton"
+        android:layout_height="wrap_content" />
+    <include layout="@layout/buttonbar" />
 </LinearLayout>
