--- a/app/src/main/res/layout/shoppinglistfragment.xml
+++ b/app/src/main/res/layout/shoppinglistfragment.xml
@@ -5,15 +5,19 @@
     android:orientation="vertical">
 
     <ListView
-        android:layout_weight="1"
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <Button
-        android:layout_width="match_parent"
-        android:text="Add"
         android:id="@+id/shoppingListAddbutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add" />
+
+    <include
+        layout="@layout/buttonbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <include layout="@layout/buttonbar" />
 </LinearLayout>
