--- a/app/src/main/res/layout/schedulefragment.xml
+++ b/app/src/main/res/layout/schedulefragment.xml
@@ -15,5 +15,11 @@
         style="@android:style/ButtonBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@android:string/ok" />
+        android:text="Generate shopping list" />
+    <Button
+        android:id="@+id/scheduleFragmentShop"
+        style="@android:style/ButtonBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Just shop" />
 </LinearLayout>
